INCLUDE_DIRECTORIES(${MOCORES_LIBRARY_OUTPUT_PATH})

#ADD_SUBDIRECTORY(unzip)
#ADD_SUBDIRECTORY(zipper)

#SET_TARGET_ATTRIBUTE(zlib "contrib")
#SET_TARGET_ATTRIBUTE(unzip "contrib")

set(Boost_USE_STATIC_LIBS OFF)
set(Boost_USE_MULTITHREADED ON)
set(Boost_USE_STATIC_RUNTIME OFF)

FIND_PACKAGE(Boost REQUIRED COMPONENTS filesystem log)
find_package(sqlite3 CONFIG REQUIRED)
