SET(LIB_NAME client)
SET(LIB_OUTNAME mocores-${LIB_NAME})

SET(HEADER_PATH ${MOCORES_PATH_HEADER}/${LIB_NAME})
SET(SOURCE_PATH ${MOCORES_PATH_SOURCE}/${LIB_OUTNAME})

INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})

SET(MOCORES_LIST
	${SOURCE_PATH}/main.cpp
)
SOURCE_GROUP("system\\core" FILES ${MOCORES_LIST})

IF(MOCORES_BUILD_SHARED_DLL)
	ADD_DEFINITIONS(-DMOCORES_BUILD_DLL_EXPORT)
	ADD_LIBRARY(${LIB_NAME} SHARED 
		${MOCORES_LIST} 
	)
ELSE()
	ADD_DEFINITIONS(-DMOCORES_STATIC)
	ADD_LIBRARY(${LIB_NAME} 
		${MOCORES_LIST}
	)
ENDIF()

target_link_libraries(${LIB_OUTNAME} PRIVATE ${Boost_LIBRARIES})

ADD_EXECUTABLE(${LIB_OUTNAME} ${MOCORES_LIST})


SET_TARGET_ATTRIBUTE(${LIB_NAME} "mocores")