SET(LIB_NAME client)
SET(LIB_OUTNAME mocores-${LIB_NAME})

SET(HEADER_PATH ${MOCORES_PATH_HEADER}/${LIB_NAME})
SET(SOURCE_PATH ${MOCORES_PATH_SOURCE}/${LIB_OUTNAME})

INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})

SET(MOCORES_LIST
	${SOURCE_PATH}/main.cpp
)
SOURCE_GROUP("system\\core" FILES ${MOCORES_LIST})

ADD_EXECUTABLE(${LIB_OUTNAME} ${MOCORES_LIST})

target_link_libraries(${LIB_OUTNAME} ${Boost_LIBRARIES})
