SET(LIB_NAME cluster)
SET(LIB_OUTNAME mocores-${LIB_NAME})

SET(HEADER_PATH ${MOCORES_PATH_HEADER}/${LIB_NAME})
SET(SOURCE_PATH ${MOCORES_PATH_SOURCE}/${LIB_OUTNAME})

SET(MOCORES_LIST
	${SOURCE_PATH}/main.cpp
)
SOURCE_GROUP("system\\core" FILES ${MOCORES_LIST})

# TARGET_LINK_LIBRARIES(${LIB_NAME} PUBLIC octoon-math)
ADD_EXECUTABLE(${LIB_OUTNAME} ${MOCORES_LIST})
