SET(LIB_NAME common)
SET(LIB_OUTNAME mocores-${LIB_NAME})

SET(HEADER_PATH ${MOCORES_PATH_HEADER}/${LIB_NAME})
SET(SOURCE_PATH ${MOCORES_PATH_SOURCE}/${LIB_OUTNAME})

SET(MOCORES_LIST
	${HEADER_PATH}/id/node_id.h
	${SOURCE_PATH}/id/node_id.cpp
	${HEADER_PATH}/platform.h
	${HEADER_PATH}/message.h
	${SOURCE_PATH}/message.cpp
)
# SOURCE_GROUP("system\\common" FILES ${MOCORES_LIST})

IF(MOCORES_BUILD_SHARED_DLL)
	ADD_DEFINITIONS(-DMOCORES_BUILD_DLL_EXPORT)
	ADD_LIBRARY(${LIB_OUTNAME} SHARED 
		${MOCORES_LIST} 
	)
ELSE()
	ADD_DEFINITIONS(-DMOCORES_STATIC)
	ADD_LIBRARY(${LIB_OUTNAME} 
		${MOCORES_LIST}
	)
ENDIF()

# TARGET_LINK_LIBRARIES(${LIB_NAME} PUBLIC octoon-math)