SET(LIB_NAME masternode)
SET(LIB_OUTNAME mocores-${LIB_NAME})

SET(HEADER_PATH ${MOCORES_PATH_HEADER}/${LIB_NAME})
SET(SOURCE_PATH ${MOCORES_PATH_SOURCE}/${LIB_OUTNAME})

SET(MASTERNODE_LIST
)
SOURCE_GROUP(${LIB_NAME} FILES ${MASTERNODE_LIST})

ADD_DEFINITIONS(-DMOCORES_BUILD_DLL_EXPORT)
ADD_LIBRARY(${LIB_OUTNAME} STATIC ${MASTERNODE_LIST})

SET_TARGET_ATTRIBUTE(${LIB_OUTNAME} "core")